--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	<main>
 		<section class="intro">
 			<div class="left">
+				<div class="shapes">
+					<img src="circle.svg" class="rotating3" id="shape1">
+					<img src="square.svg" class="rotating2" id="shape2">
+					<img src="triangle.svg" class="rotating1" id="shape3">
+				</div>
 				<div>
 					<h3>Hacknight is</h3>
 					<h1>A Tuesday get-together where friends work on side projects</h1>
@@ -29,12 +34,33 @@
 			</div>
 			<div class="fancy-type">
 				<div class="type-top">20</div>
-				<div class="type-bottom">16</div>
+				<div class="type-bottom"><span class="spacing-hack">1</span>6</div>
 			</div>
 		</section>
 
 		<section class="projects">
-			
+			<h3>Projects</h3>
+			<div class="project-item">
+				<img src="https://via.placeholder.com/1000x400" alt="">
+				<div class="project-description">
+					<h3>Etiam porta</h3>
+					<p>Sed posuere consectetur est at lobortis. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+				</div>
+			</div>
+			<div class="project-item">
+				<img src="https://via.placeholder.com/1000x400" alt="">
+				<div class="project-description">
+					<h3>Etiam porta</h3>
+					<p>Sed posuere consectetur est at lobortis. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+				</div>
+			</div>
+			<div class="project-item">
+				<img src="https://via.placeholder.com/1000x400" alt="">
+				<div class="project-description">
+					<h3>Etiam porta</h3>
+					<p>Sed posuere consectetur est at lobortis. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+				</div>
+			</div>
 		</section>
 	</main>
 </body>
